add tsoa route
