# public/swagger.json
@@ -12,10 +12,6 @@
 					"name": {
 						"type": "string"
 					},
-					"dateOfBirth": {
-						"type": "string",
-						"format": "date-time"
-					},
 					"email": {
 						"type": "string"
 					},
@@ -25,10 +21,24 @@
 				},
 				"required": [
 					"name",
-					"dateOfBirth",
 					"email",
 					"password"
 				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"UpdateUserRequest": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
 				"type": "object",
 				"additionalProperties": false
 			}
@@ -44,7 +54,7 @@
 		"contact": {}
 	},
 	"paths": {
-		"/": {
+		"/user": {
 			"post": {
 				"operationId": "CreateUser",
 				"responses": {
@@ -84,6 +94,68 @@
 				},
 				"security": [],
 				"parameters": []
+			}
+		},
+		"/user/{id}": {
+			"get": {
+				"operationId": "GetUserById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"put": {
+				"operationId": "UpdateUserById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UpdateUserRequest"
+							}
+						}
+					}
+				}
 			}
 		}
 	},
