# src/models/user.ts
@@ -9,8 +9,6 @@ import { transform } from "typescript";
 
 export interface IUserDocument extends Document {
   name: string;
-  age?: number;
-  dateOfBirth: Date;
   email: string;
   password: string;
 }
@@ -21,10 +19,6 @@ const userSchema = new mongoose.Schema(
   {
     name: {
       type: String,
-      required: true,
-    },
-    dateOfBirth: {
-      type: Date,
       required: true,
     },
     email: {
@@ -40,40 +34,13 @@ const userSchema = new mongoose.Schema(
   {
     toJSON: {
       transform(doc, ret) {
-        delete ret.password;
-        delete ret.salt;
+        // delete ret.password;
+        // delete ret.salt;
         delete ret.__v;
       },
     },
   }
 );
 
-// Define a virtual property 'age' based on 'dateOfBirth'
-userSchema.virtual("age").get(function (this: IUserDocument) {
-  const currentDate = moment();
-  const birthDate = moment(this.dateOfBirth);
-  return currentDate.diff(birthDate, "years");
-});
-
-// Ensure virtual fields are included when converting document to JSON
-// userSchema.set("toJSON", { virtuals: true });
-
-// Middleware to update 'age' field before saving/updating document
-userSchema.pre<IUserDocument>("save", function (next) {
-  this.age = moment().diff(moment(this.dateOfBirth), "years");
-  next();
-});
-
-// Middleware to update 'age' field after findOneAndUpdate operation
-userSchema.post<IUserDocument>(
-  "findOneAndUpdate",
-  function (doc: IUserDocument | null) {
-    if (doc) {
-      const currentDate = moment();
-      const birthDate = moment(doc.dateOfBirth);
-      doc.age = currentDate.diff(moment(birthDate), "years");
-    }
-  }
-);
 const UserModel = mongoose.model<IUserDocument, IUserModel>("User", userSchema);
 export default UserModel;
