# src/repository/@types/userRepository.type.ts
@@ -2,6 +2,12 @@ export interface UserCreateRepository {
     name: string
     email: string
     password: string
-    dateOfBirth: Date
-    
+
+}
+
+export interface UserUpdateRepository{
+    id: string
+    name?: string
+    email?: string
+    password?: string
 }
