# src/routes/userRoutes.ts
@@ -1,7 +1,5 @@
-// src/routes/userRoutes.ts
 import express, { NextFunction, Request } from "express";
 import validateInput from "../middlewares/validateInput";
-// import { SIGNUP_ROUTE } from "./route-defs";
 import { UserSchema } from "../schema/userSchema";
 import { UserController } from "../controllers/userController";
 
@@ -10,30 +8,49 @@ const app = express.Router();
 const userController = new UserController();
 
 // CRUD routes
-app.get("/", async (req: Request, res, _next) => {
+app.get("/user", async (req: Request, res, _next) => {
   try {
     const response = await userController.getUsers();
-
     return res.send(response);
   } catch (error) {
     _next(error);
   }
 });
 
-// app.get("/:id", userController.getUserById);
-// app.post("/", userController.createUser);
+app.get("/user/:id", async (req: Request, res, _next) => {
+  try {
+    const requestId = req.params.id;
+    const response = await userController.getUserById(requestId);
+    if(!response){
+      res.status(404).send("User not found")
+    }
+    return res.send(response);
+  } catch (error) {
+    _next(error);
+  }
+});
 
-app.post("/", validateInput(UserSchema), async (req: Request, res, _next) => {
+app.post("/user", validateInput(UserSchema), async (req: Request, res, _next) => {
   try {
     const requestBody = req.body;
     const response = await userController.createUser(requestBody);
-
     return res.send(response);
   } catch (error) {
     _next(error);
   }
 });
-// app.put("/:id", userController.updateUserById);
-// app.delete("/:id", userController.deleteUserById);
+
+app.put("/user/:id", validateInput(UserSchema), async(req: Request, res,_next)=>{
+  try {
+    const requestId = req.params.id
+    const requestBody = req.body
+
+    const response = await userController.updateUserById(requestId, requestBody)
+    return res.send(response)
+  } catch (error) {
+    _next(error)
+  }
+})
+
 
 export default app;
