# src/schema/userSchema.ts
@@ -2,7 +2,6 @@ import {z} from "zod"
 
 export const UserSchema = z.object({
     email: z.string().email(),
-    dateOfBirth: z.date(),
     password: z.string().min(6, "Password must be at least 6 characters long"),
     name: z.string().min(3, "Name must be at least 3 characters long"),
 })
